; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonpath_exec.c_cmpTimestampWithOverflow.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonpath_exec.c_cmpTimestampWithOverflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @cmpTimestampWithOverflow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmpTimestampWithOverflow(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @IS_VALID_TIMESTAMP(i32 %8)
  %10 = call i32 @Assert(i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %32

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %13
  %17 = load i32, i32* %7, align 4
  %18 = call i64 @TIMESTAMP_IS_NOBEGIN(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i32 1, i32* %4, align 4
  br label %36

21:                                               ; preds = %16
  store i32 -1, i32* %4, align 4
  br label %36

22:                                               ; preds = %13
  %23 = load i32, i32* %6, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %22
  %26 = load i32, i32* %7, align 4
  %27 = call i64 @TIMESTAMP_IS_NOEND(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 -1, i32* %4, align 4
  br label %36

30:                                               ; preds = %25
  store i32 1, i32* %4, align 4
  br label %36

31:                                               ; preds = %22
  br label %32

32:                                               ; preds = %31, %3
  %33 = load i32, i32* %5, align 4
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @timestamp_cmp_internal(i32 %33, i32 %34)
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %32, %30, %29, %21, %20
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @IS_VALID_TIMESTAMP(i32) #1

declare dso_local i64 @TIMESTAMP_IS_NOBEGIN(i32) #1

declare dso_local i64 @TIMESTAMP_IS_NOEND(i32) #1

declare dso_local i32 @timestamp_cmp_internal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
